# flo

./: .gitignore  README.md  TODO.md  UPDATE.md  flo_audio.ksy
.github/workflows/: build-demo.yml  build-reflo.yml  build-wasm.yml  lint.yml  release.yml  test.yml
Demo/: index.html  main.js  styles.css
Demo/js/: analysis.js  audio.js  codec.js  decoder.js  download.js  encoder.js  playback.js  state.js  streaming.js  ui.js  visualizer.js  worker.js
Docs/: README.md  cli-reference.md  file-format.md  getting-started.md  javascript-api.md  metadata-guide.md  rust-api.md  streaming.md
Examples/: README.md  audio_lossless.flo  audio_lossy.flo  chord_cmajor_stereo.flo  click_track_120bpm.flo  dtmf_tones.flo  hires_96khz.flo  lossy_chord_high.flo  lossy_chord_low.flo  lossy_chord_medium.flo  lossy_chord_transparent.flo  lossy_chord_veryhigh.flo  lossy_music_pattern.flo  multitone_stereo.flo  silence_1sec.flo  sine_440hz_mono.flo  sweep_20_20k.flo  telephone_8khz.flo  white_noise.flo
Scripts/: build.ps1  build.sh  generate_examples.sh  serve.ps1  serve.sh
libflo/: Cargo.toml  README.md  package.json.template
libflo/src/: lib.rs  reader.rs  seeking.rs  writer.rs
libflo/src/core/: analysis.rs  audio_constants.rs  crc32.rs  ebu_r128.rs  metadata.rs  mod.rs  rice.rs  types.rs
libflo/src/lossless/: decoder.rs  encoder.rs  lpc.rs  mod.rs
libflo/src/lossy/: decoder.rs  encoder.rs  mdct.rs  mod.rs  psychoacoustic.rs
libflo/src/streaming/: decoder.rs  encoder.rs  mod.rs  tests.rs  types.rs
libflo/tests/: analysis_tests.rs  core_crc32_tests.rs  core_metadata_tests.rs  core_rice_tests.rs  duration_timing_tests.rs  edge_case_tests.rs  integration_tests.rs  lossless_decoder_tests.rs  lossless_encoder_tests.rs  lossless_lpc_tests.rs  lossy_decoder_tests.rs  lossy_encoder_tests.rs  lossy_mdct_tests.rs  lossy_psychoacoustic_tests.rs  lossy_quality_tests.rs  lossy_transform_tests.rs  loudness_tests.rs  mod.rs  spectral_analysis_tests.rs  streaming_tests.rs
libflo/tests/js/: jest.config.js  package.json  streaming-encoder.test.js
libflo/tests/rust/: core_crc32_tests.rs  core_rice_tests.rs  lossless_encoder_tests.rs  lossless_lpc_tests.rs  lossy_decoder_tests.rs  lossy_psychoacoustic_tests.rs  lossy_quality_tests.rs  loudness_tests.rs  mod.rs  seeking_integration_tests.rs  seeking_tests.rs  streaming_tests.rs
reflo/: Cargo.toml  README.md  package.json.template
reflo/examples/: convert_audio.rs  metadata.rs
reflo/src/: audio.rs  lib.rs  main.rs  wasm.rs
reflo/tests/: encode_decode_tests.rs
