[package]
name = "libflo-audio"
version = "0.1.2"
edition = "2021"
authors = ["NellowTCS"]
description = "The official encoder/decoder for the flo™ audio format"
keywords = ["audio", "codec", "wasm", "encoder", "decoder"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/flo-audio/flo"
homepage = "https://github.com/flo-audio/flo"
categories = ["multimedia::audio", "multimedia::encoding", "wasm"]
exclude = ["pkg/"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
rmp-serde = "1.3"
serde_bytes = "0.11"
# I would make this from scratch, but I don't hate myself :P
rustfft = "6.2"

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]

# Speed optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = 3
